--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
+  http: ^0.12.2
+  sqflite: ^1.3.2+1
 
 dev_dependencies:
   flutter_test:
